<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ strings.xml
  ~ Created by G.Capelli on 21/5/2020
  ~ This file is part of BasicAirData Clinometer
  ~
  ~ Copyright (C) 2020 BasicAirData
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
-->

<resources>
    <string name="app_name" translatable="false">Clinometer</string>

    <string name="toast_please_grant_camera_permission">Please grant the camera permission to enable this feature</string>
    <string name="toast_lay_vertical">Keep the screen vertical and roll or tilt the device</string>
    <string name="toast_calibrate_before_use">Please go to settings\nand calibrate the app before use</string>
    <string name="toast_no_browser_installed">No Internet browser installed</string>
    <string name="toast_click_back_again_to_exit">Click BACK again to exit</string>

    <!-- Preferences -->
    <string name="Settings">Settings</string>

    <string name="pref_keep_screen_on">Keep Screen On</string>
    <string name="pref_keep_screen_on_summary">Battery drains faster</string>
    <string name="prefColorTheme">Dark Mode</string>
    <string name="changeColorTheme">Change Color Theme</string>

    <string name="title_activity_calibration">Calibration</string>
    <string name="pref_calibration_summary_notcalibrated">Not calibrated</string>
    <string name="pref_calibration_summary_calibrated">Calibrated</string>
    <string name="pref_calibration_reset">Reset</string>
    <string name="pref_calibration_reset_summary">Clear the calibration</string>

    <string name="pref_autolocking">Auto Locking</string>
    <string name="pref_autolocking_summary">Locks measurement when steady</string>
    <string name="pref_autolocking_horizon">Horizon Alignment</string>
    <string name="pref_autolocking_horizon_summary">For vertical measurements</string>
    <string name="pref_autolocking_precision">Precision</string>

    <string name="pref_cameramode_camera_to_use">Camera</string>
    <string name="pref_cameramode_camera_front">Front Camera</string>
    <string name="pref_cameramode_camera_rear">Rear Camera</string>
    <string name="pref_cameramode_no_cameras">This device has no camera</string>
    <string name="pref_cameramode_no_permission_to_access">No permission to access camera</string>
    <string name="pref_cameramode_exposure_compensation">Exposure Compensation</string>

    <string name="pref_about">Info</string>
    <string name="pref_about_summary">About Clinometer</string>
    <string name="pref_online_help">Online Help</string>
    <string name="pref_online_help_summary">Explore usage and settings</string>

    <string name="pref_unit_of_measurement">Unit of Measurement</string>
    <string name="pref_unit_of_measurement_degrees">Degrees (°)</string>
    <string name="pref_unit_of_measurement_radians">Radians</string>
    <string name="pref_unit_of_measurement_percent">Percent (%)</string>
    <string name="pref_unit_of_measurement_fractional">Fractional</string>
    <!--<string name="pref_unit_of_measurement_engineering_1H">Engineering V:1H</string>-->

    <!-- Units of Measurement -->
    <string name="um_degrees">°</string>
    <string name="um_percent">%</string>

    <!-- About Dialog -->
    <string name="about_version">ver.</string>
    <string name="about_description">Copyright (C) 2020 BasicAirData\nhttps://www.basicairdata.eu\n\nBasicAirData Clinometer measures the inclination angles of your device with respect to gravity\'s direction using the onboard Accelerometers.\n\nThis program is free software, released under the terms of the GNU General Public License.\nFor more details see: https://www.gnu.org/licenses/gpl.txt</string>
    <string name="about_description_googleplaystore">If You enjoy using this app, please take a moment to rate Clinometer in the Google Play Store.</string>
    <string name="about_rate_this_app">Rate this App</string>
    <string name="about_unable_to_rate">Unable to reach the Store</string>

    <!-- Calibration Activity -->
    <string name="calibration_active_calibration">Active calibration:</string>
    <string name="calibration_active_calibration_gains">Gains</string>
    <string name="calibration_active_calibration_offsets">Offsets</string>
    <string name="calibration_active_calibration_angles">Angles</string>
    <string name="calibration_step1">Step 1 of 7\nLay flat and press next</string>
    <string name="calibration_step2">Step 2 of 7\nRotate 180° and press next</string>
    <string name="calibration_step3">Step 3 of 7\nLay on the left side and press next</string>
    <string name="calibration_step4">Step 4 of 7\nRotate 180° and press next</string>
    <string name="calibration_step5">Step 5 of 7\nLay vertical and press next</string>
    <string name="calibration_step6">Step 6 of 7\nRotate 180° upside-down and press next</string>
    <string name="calibration_step7">Step 7 of 7\nPress next and lay face down</string>
    <string name="calibration_calibrating">Calibrating...\nDon\'t move the device</string>
    <string name="calibration_progress">Progress</string>
    <string name="calibration_tolerance">Tolerance</string>

    <string name="calibration_abort">Do you really want to abort the calibration process and return to settings?</string>

    <string name="next">Next >></string>

    <!-- Dialogs -->
    <string name="dialog_reset_calibration_confirmation">Do you want to reset the current calibration?</string>
    <string name="dialog_calibration_completed">Calibration completed!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>

</resources>
